modulo_3_AN/3.2/p3/server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      restartPolicy: Always
      containers:
      - name: server
        image: oscarsotosanchez/server:v1.0
        command: ["bash"]
        args:
        - "-c"
        - "./wait-for-it.sh mysql-service:3306 -t 500 -- ./wait-for-it.sh rabbitmq-service:5672 -t 500 -- node src/server.js"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: server-port
  selector:
    app: server
  type: ClusterIP
