modulo_3_AN/3.2/p3/ingress-host.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: eoloplanner-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
   - host: cluster-ip
     http:
      paths:
      - pathType: Prefix        
        path: /(.*)
        backend:
          service:
            name: server-service
            port:
              number: 3000
      - path: /toposervice/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: toposervice-service
            port:
              number: 8080
