modulo_3_AN/3.2/p3/mongodb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:      
      containers:
      - name: mongodb
        image: mongo:4.2.12-bionic
        ports:
        - containerPort: 27017
        - containerPort: 27018
        - containerPort: 27019
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db        
      volumes:
      - name: mongodb-persistent-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
          
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb-port-27017
  - port: 27018
    targetPort: 27018
    protocol: TCP
    name: mongodb-port-27018
  - port: 27019
    targetPort: 27019
    protocol: TCP
    name: mongodb-port-27019
  selector:
    app: mongodb
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb
spec:
  podSelector:
    matchLabels:
      app: mongodb  
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: toposervice
      ports:
      - port: 27017
        protocol: TCP  
      - port: 27018
        protocol: TCP  
      - port: 27019
        protocol: TCP
