modulo_3_AN/3.2/p3/mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:      
      containers:
      - name: mysql
        image: mysql:8.0.22
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql        
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql-port
  selector:
    app: mysql
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
spec:
  podSelector:
    matchLabels:
      app: mysql  
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: server
      ports:
      - port: 3306
        protocol: TCP
