modulo_3_AN/3.2/p3/toposervice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toposervice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: toposervice
    spec:
      securityContext:
          runAsUser: 1000
      restartPolicy: Always
      containers:
      - name: toposervice
        image: oscarsotosanchez/toposervice:v1.0
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false 
---
apiVersion: v1
kind: Service
metadata:
  name: toposervice-service
  labels:
    app: toposervice
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: toposervice-port
  selector:
    app: toposervice
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toposervice
spec:
  podSelector:
    matchLabels:
      app: toposervice
  egress:
  - to:    
    - podSelector:
        matchLabels:
          app: planner
    - podSelector:
        matchLabels:
          app: mongodb
    ports:
    - port: 8080
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27018
      protocol: TCP
    - port: 27019
      protocol: TCP
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planner
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: eoloplanner-ingress
      ports:      
      - port: 8080
        protocol: TCP
