modulo_3_AN/3.2/p3/weatherservice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherservice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: weatherservice
  replicas: 1
  template:
    metadata:
      labels:
        app: weatherservice
    spec:
      securityContext:
          runAsUser: 1000
      restartPolicy: Always
      containers:
      - name: weatherservice
        image: oscarsotosanchez/weatherservice:v1.0
        ports:
        - containerPort: 9090
        securityContext:
          allowPrivilegeEscalation: false 
---
apiVersion: v1
kind: Service
metadata:
  name: weatherservice-service
  labels:
    app: weatherservice
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: weatherservice-port
  selector:
    app: weatherservice
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: weatherservice
spec:
  podSelector:
    matchLabels:
      app: weatherservice
  egress:
  - to:    
    - podSelector:
        matchLabels:
          app: planner
    ports:
    - port: 9090
      protocol: TCP
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planner
      ports:      
      - port: 9090
        protocol: TCP
